# packerl

./: .gitignore  .gitmodules  README.md  REUSE.toml  environment.yaml  install.sh  main.py  packerl_env.py
.reuse/: dep5
LICENSES/: MIT.txt
baselines/: __init__.py  random.py  spf.py
baselines/magnneto/: actor.py  environment.py  magnneto.py
config/: defaults.yaml  sanity_check.yaml
config/tmlr24/: ablation_fieldlines_architecture.yaml  ablation_fieldlines_features.yaml  ablation_fieldlines_learning.yaml  ablation_fieldlines_objective.yaml  ablation_mslim_architecture.yaml  ablation_training_topology.yaml  baselines_l.yaml  baselines_m.yaml  baselines_s.yaml  (+21 more)
features/: feature_utils.py  features.py
ns3-packerl/: CMakeLists.txt  packerl.cc  packerl.h  sim.cc
ns3-packerl/applications/: disposable-application.cc  disposable-application.h  disposable-bulk-send-application.cc  disposable-bulk-send-application.h  disposable-onoff-application.cc  disposable-onoff-application.h
ns3-packerl/monitoring/: monitoring-dir-edge.cc  monitoring-dir-edge.h
ns3-packerl/odd-routing/: odd-label-map.cc  odd-label-map.h  odd-node.cc  odd-node.h  odd-routing-helper.cc  odd-routing-helper.h  odd-routing.cc  odd-routing.h  odd-tag.cc  odd-tag.h
ns3-packerl/utils/: ryml_all.hpp  shared-structs.cc  shared-structs.h  sim-parameters.h  types.h
reward/: reward_module.py
scenarios/: __init__.py  config.py  generator.py  scenario.py
scripts/: test_scenario_gen.py
utils/: constants.py  evaluation.py  logging.py  serialization.py  tensor.py  types.py  utils.py
(+125 files in other folders)
